[package]
name = "dg-solana-zapin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dg_solana_programs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl ="0.31.1"
proc-macro2 = "1.0.95"
anchor-syn = "0.31.1"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "cpi",
] }
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }
solana-security-txt = "1.1.1"

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"